# workly

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  alembic.ini  pyproject.toml
docker_compose/: app.yaml  storages.yaml  tg_bot.yaml
src/: config.py  ioc.py  logger.py  main.py
src/application/dto/chat/: message.py
src/application/dto/user/: register.py
src/application/services/: auth.py  code.py  jwt.py
src/application/use_cases/auth/: login.py  register.py
src/application/use_cases/chat/: save_message.py
src/application/use_cases/code/: code.py
src/application/use_cases/user/: register.py
src/bot/: ioc.py  logger.py  run.py
src/bot/handlers/users/: main.py
src/domain/chat/: entity.py
src/domain/common/: entity.py  exception.py  value_object.py
src/domain/user/: entity.py  exception.py
src/infrastructure/broker/rabbitmq/: consumer.py  publisher.py
src/infrastructure/cache/: redis.py
src/infrastructure/database/: postgresql.py
src/infrastructure/database/models/: base.py  chat.py  review.py  user.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 0b1cc2d1f44f_.py  19fd5fddeb4c_.py  1fb3287dc7f9_.py  374af8bfa79b_.py  3d60960a2694_.py  4897a4047f0a_.py  7c32811516eb_.py  7c3ab65d5dd2_.py  90d48820eff0_.py  b4258e37e9ea_.py  f1e4e8d2061c_.py  f43ce72e4b58_.py
src/infrastructure/repositories/chat/: base.py  sqlalchemy.py
src/infrastructure/repositories/user/: base.py  sqlalchemy.py
src/presentation/controllers/: auth.py  chat.py  main.py  setup_routers.py
(+12 files in other folders)
